@@ -1,6 +1,8 @@
 package com.tamscrap;
 
-import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 
 import org.springframework.boot.CommandLineRunner;
@@ -27,49 +29,60 @@ public class TamscrapApplication {
     public CommandLineRunner initData(ClienteRepo clienteRepo, ProductoRepo productoRepo, PedidoRepo pedidoRepo, PasswordEncoder encoder) {
         return args -> {
             // Creación de clientes
-            Cliente user1 = new Cliente("User One", "user1", encoder.encode("1234"), "user1@localhost",
-                    new ArrayList<>(List.of(UserAuthority.ADMIN, UserAuthority.USER)));
+        	Cliente user1 = new Cliente(
+        		    "User One",
+        		    "user1",
+        		    encoder.encode("1234"),
+        		    "user1@localhost",
+        		    new HashSet<>(Arrays.asList(UserAuthority.ADMIN, UserAuthority.USER))
+        		);
 
-            Cliente user2 = new Cliente("User Two", "user2", encoder.encode("1234"), "user2@localhost",
-                    new ArrayList<>(List.of(UserAuthority.USER)));
+        		Cliente user2 = new Cliente(
+        		    "User Two",
+        		    "user2",
+        		    encoder.encode("1234"),
+        		    "user2@localhost",
+        		    new HashSet<>(Collections.singletonList(UserAuthority.USER))
+        		);
 
-            clienteRepo.save(user1);
-            clienteRepo.save(user2);
+        		clienteRepo.save(user1);
+        		clienteRepo.save(user2);
 
-            // Productos de Lettering con descuentos
+
+            // Productos de Lettering con más variedad
             List<Producto> productosLettering = List.of(
-                    crearProductoConPrecioOriginal("Brush Pen", 3.99, "https://www.milbby.com/cdn/shop/products/33614921212_2_20_1000x1000.jpg?v=1709233766", true, false, true, 10),
-                    crearProductoConPrecioOriginal("Rotuladores de punta fina", 5.99, "https://master.opitec.com/out/pictures/master/product/1/623095-000-000-VO-01-z.jpg", true, false, false, null),
-                    crearProductoConPrecioOriginal("Guía de caligrafía", 8.99, "https://dummyimage.com/200x200/fff/aaa", true, false, true, 15),
-                    crearProductoConPrecioOriginal("Tinta para Lettering", 4.50, "https://dummyimage.com/200x200/fff/aaa", true, false, false, null),
-                    crearProductoConPrecioOriginal("Papel para Lettering", 6.00, "https://dummyimage.com/200x200/fff/aaa", true, false, true, 5)
+                    crearProductoConPrecioOriginal("Brush Pen", 3.99, "https://www.milbby.com/cdn/shop/products/33614921212_2_20_1000x1000.jpg?v=1709233766", true, false, true, 10, 50),
+                    crearProductoConPrecioOriginal("Rotuladores de punta fina", 5.99, "https://master.opitec.com/out/pictures/master/product/1/623095-000-000-VO-01-z.jpg", true, false, false, null, 30),
+                    crearProductoConPrecioOriginal("Guía de caligrafía avanzada", 12.99, "https://dummyimage.com/200x200/fff/aaa", true, false, true, 58, 0),
+                    crearProductoConPrecioOriginal("Tinta premium para Lettering", 8.49, "https://dummyimage.com/200x200/fff/aaa", true, false, true, 30, 10),
+                    crearProductoConPrecioOriginal("Set de tarjetas creativas", 7.00, "https://dummyimage.com/200x200/fff/aaa", true, false, false, null, 35)
             );
 
-            // Productos de Scrapbooking con descuentos
+            // Productos de Scrapbooking con más variedad
             List<Producto> productosScrapbooking = List.of(
-                    crearProductoConPrecioOriginal("Kit de papeles decorativos", 12.99, "https://dummyimage.com/200x200/fff/aaa", false, true, true, 20),
-                    crearProductoConPrecioOriginal("Tijeras con formas", 4.99, "https://dummyimage.com/200x200/fff/aaa", false, true, false, null),
-                    crearProductoConPrecioOriginal("Pegamento para Scrapbooking", 3.50, "https://dummyimage.com/200x200/fff/aaa", false, true, false, null),
-                    crearProductoConPrecioOriginal("Troqueladora de formas", 6.99, "https://dummyimage.com/200x200/fff/aaa", false, true, true, 10),
-                    crearProductoConPrecioOriginal("Stickers decorativos", 2.99, "https://dummyimage.com/200x200/fff/aaa", false, true, false, null)
+                    crearProductoConPrecioOriginal("Kit de papeles decorativos", 12.99, "https://dummyimage.com/200x200/fff/aaa", false, true, true, 10, 15),
+                    crearProductoConPrecioOriginal("Tijeras decorativas de borde", 6.99, "https://dummyimage.com/200x200/fff/aaa", false, true, false, null, 25),
+                    crearProductoConPrecioOriginal("Pegamento resistente para Scrapbooking", 5.50, "https://dummyimage.com/200x200/fff/aaa", false, true, false, null, 0),
+                    crearProductoConPrecioOriginal("Cinta Washi con patrones", 3.99, "https://dummyimage.com/200x200/fff/aaa", false, true, true, 70, 40),
+                    crearProductoConPrecioOriginal("Plantillas de formas geométricas", 8.49, "https://dummyimage.com/200x200/fff/aaa", false, true, true, 10, 20)
             );
 
-            // Productos de Papelería General con descuentos
+            // Productos de Papelería General con más variedad
             List<Producto> productosPapeleria = List.of(
-                    crearProductoConPrecioOriginal("Cuaderno A5", 2.99, "https://dummyimage.com/200x200/fff/aaa", false, false, true, 5),
-                    crearProductoConPrecioOriginal("Bolígrafos de colores", 1.99, "https://dummyimage.com/200x200/fff/aaa", false, false, false, null),
-                    crearProductoConPrecioOriginal("Goma de borrar", 0.99, "https://dummyimage.com/200x200/fff/aaa", false, false, false, null),
-                    crearProductoConPrecioOriginal("Bloc de notas adhesivas", 3.99, "https://dummyimage.com/200x200/fff/aaa", false, false, false, null),
-                    crearProductoConPrecioOriginal("Lápices de grafito", 1.50, "https://dummyimage.com/200x200/fff/aaa", false, false, true, 10)
+                    crearProductoConPrecioOriginal("Cuaderno rayado A4", 4.99, "https://dummyimage.com/200x200/fff/aaa", false, false, true, 5, 100),
+                    crearProductoConPrecioOriginal("Bolígrafos metálicos", 7.99, "https://dummyimage.com/200x200/fff/aaa", false, false, false, null, 80),
+                    crearProductoConPrecioOriginal("Sacapuntas eléctrico", 12.49, "https://dummyimage.com/200x200/fff/aaa", false, false, true, 10, 0),
+                    crearProductoConPrecioOriginal("Notas adhesivas de colores", 6.99, "https://dummyimage.com/200x200/fff/aaa", false, false, false, null, 70),
+                    crearProductoConPrecioOriginal("Regla flexible 30 cm", 2.99, "https://dummyimage.com/200x200/fff/aaa", false, false, false, null, 90)
             );
 
-            // Productos favoritos
+            // Productos favoritos adicionales
             List<Producto> productosFavoritos = List.of(
-                crearProductoFavorito("Marcadores permanentes", 7.99, "https://dummyimage.com/200x200/fff/aaa", false, false, true, 10),
-                crearProductoFavorito("Álbum Scrapbooking", 15.99, "https://dummyimage.com/200x200/fff/aaa", false, true, true, 20),
-                crearProductoFavorito("Kit de pinceles para Lettering", 12.50, "https://dummyimage.com/200x200/fff/aaa", true, false, false, null),
-                crearProductoFavorito("Lápices acuarelables", 9.99, "https://dummyimage.com/200x200/fff/aaa", true, false, true, 15),
-                crearProductoFavorito("Rotulador doble punta", 6.99, "https://dummyimage.com/200x200/fff/aaa", true, false, false, null)
+                    crearProductoFavorito("Set de acuarelas", 14.99, "https://dummyimage.com/200x200/fff/aaa", true, false, true, 60, 15),
+                    crearProductoFavorito("Cinta adhesiva doble cara", 3.49, "https://dummyimage.com/200x200/fff/aaa", false, true, false, null, 60),
+                    crearProductoFavorito("Rotuladores fluorescentes", 9.50, "https://dummyimage.com/200x200/fff/aaa", true, false, false, null, 0),
+                    crearProductoFavorito("Organizador para escritorio", 11.49, "https://dummyimage.com/200x200/fff/aaa", false, false, true, 5, 20),
+                    crearProductoFavorito("Caja de clips metálicos", 4.99, "https://dummyimage.com/200x200/fff/aaa", false, false, false, null, 100)
             );
 
             // Guardar todos los productos en el repositorio
@@ -80,32 +93,24 @@ public class TamscrapApplication {
         };
     }
 
+
     // Método auxiliar para crear productos calculando precioOriginal
     private Producto crearProductoConPrecioOriginal(String nombre, double precio, String imagen,
-                                                    boolean lettering, boolean scrapbooking, boolean oferta, Integer descuento) {
-        Double precioOriginal = null;
-        if (descuento != null && descuento > 0) {
-            precioOriginal = precio / (1 - (descuento / 100.0));
-        } else {
-            precioOriginal = precio; // Si no hay descuento, el precio original es el precio actual
-        }
-        
-        return new Producto(null, nombre, precio, imagen, lettering, scrapbooking, oferta, descuento, false, precioOriginal);
+                                                    boolean lettering, boolean scrapbooking, boolean oferta, Integer descuento, int cantidad) {
+        Double precioOriginal = (descuento != null && descuento > 0) 
+            ? precio / (1 - (descuento / 100.0)) 
+            : precio;
+
+        return new Producto(null, nombre, precio, imagen, lettering, scrapbooking, oferta, descuento, cantidad, false, precioOriginal);
     }
 
     // Método auxiliar para crear productos marcados como favoritos
     private Producto crearProductoFavorito(String nombre, double precio, String imagen,
-                                           boolean lettering, boolean scrapbooking, boolean oferta, Integer descuento) {
-        Double precioOriginal = null;
+                                           boolean lettering, boolean scrapbooking, boolean oferta, Integer descuento, int cantidad) {
+        Double precioOriginal = (descuento != null && descuento > 0) 
+            ? precio / (1 - (descuento / 100.0)) 
+            : precio;
 
-        // Si hay descuento, calcular el precio original
-        if (descuento != null && descuento > 0) {
-            precioOriginal = precio / (1 - (descuento / 100.0));
-        } else {
-            precioOriginal = precio; // Si no hay descuento, el precio original es igual al precio actual
-        }
-
-        // Crear el producto y marcarlo como favorito
-        return new Producto(null, nombre, precio, imagen, lettering, scrapbooking, oferta, descuento, true, precioOriginal);
+        return new Producto(null, nombre, precio, imagen, lettering, scrapbooking, oferta, descuento, cantidad, true, precioOriginal);
     }
 }
